[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/theme/fonts/big_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/theme/gravity_theme.tres" type="Theme" id=2]
[ext_resource path="res://game/ui/hud/Hud.gd" type="Script" id=3]
[ext_resource path="res://assets/theme/fonts/menu_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://game/ui/hud/StatLineRacer.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/ui/hud/GameTime.gd" type="Script" id=7]
[ext_resource path="res://game/ui/hud/HudGameTimer.tscn" type="PackedScene" id=8]
[ext_resource path="res://game/ui/hud/StartCountdown.tscn" type="PackedScene" id=9]

[node name="Hud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 360.0, 16.0 ],
"_edit_vertical_guides_": [ 640.0, 0.0, 320.0, 8.0 ]
}

[node name="StatLineRacer1" parent="." instance=ExtResource( 5 )]
margin_left = 9.0
margin_top = 5.0
margin_right = 49.0
margin_bottom = 121.0

[node name="StatLineRacer2" parent="." instance=ExtResource( 5 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -56.0
margin_top = 5.0
margin_right = -16.0
margin_bottom = 161.0
grow_horizontal = 0

[node name="StatLineRacer3" parent="." instance=ExtResource( 5 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -163.0
margin_right = 56.0
margin_bottom = -7.0
grow_vertical = 0
alignment = 2

[node name="StatLineRacer4" parent="." instance=ExtResource( 5 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -56.0
margin_top = -163.0
margin_right = -16.0
margin_bottom = -7.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="LevelName" type="Label" parent="."]
margin_left = 194.5
margin_top = 341.0
margin_right = 445.5
margin_bottom = 354.0
grow_horizontal = 2
text = "Prva runda"
align = 1
__meta__ = {
"_edit_group_": true
}

[node name="GameStats" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -126.0
margin_top = 2.0
margin_right = 125.0
margin_bottom = 45.0
grow_horizontal = 2
theme = ExtResource( 2 )
custom_constants/separation = 1
script = ExtResource( 7 )

[node name="GameTimer" parent="GameStats" instance=ExtResource( 8 )]
unique_name_in_owner = true
margin_left = 0.0
margin_right = 251.0

[node name="RecordLap" type="Label" parent="GameStats"]
margin_top = 27.0
margin_right = 251.0
margin_bottom = 40.0
grow_horizontal = 2
text = "Record: 00:00:00"
align = 1
uppercase = true
__meta__ = {
"_edit_group_": true
}

[node name="Popups" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartCountdown" parent="Popups" instance=ExtResource( 9 )]
unique_name_in_owner = true
visible = false

[node name="GameEvent" type="Control" parent="Popups"]
visible = false
margin_left = 190.0
margin_top = 122.0
margin_right = 454.0
margin_bottom = 203.0

[node name="Name" type="Label" parent="Popups/GameEvent"]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -44.0
margin_right = 44.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 4 )
text = "Player 1"
align = 1

[node name="Event" type="Label" parent="Popups/GameEvent"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -122.5
margin_top = -64.0
margin_right = 122.5
custom_fonts/font = ExtResource( 1 )
text = "DEAD!!!"
align = 1

[connection signal="gametime_is_up" from="GameStats/GameTimer" to="." method="_on_GameTimer_gametime_is_up"]
